# cowvision

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  code-walkthrough.md  testing.md  tutorial.md
src/cowvision/: __init__.py  bootstrap.py  calibration.py  cli.py  config.py  database.py  kinect.py  measurement.py  models.py  repositories.py  schemas.py  services.py  storage.py
src/pigvision/: __init__.py  bootstrap.py  calibration.py  cli.py  config.py  database.py  kinect.py  measurement.py  models.py  repositories.py  services.py  storage.py
tests/: test_calibration.py  test_cli.py  test_measurement.py  test_services.py
